--- a/README
+++ b/README
@@ -1,9 +1,9 @@
-Math::Prime::Util version 0.16
+Math::Prime::Util version 0.17
 
 A set of utilities related to prime numbers.  These include multiple sieving
 methods, is_prime, prime_count, nth_prime, approximations and bounds for
 the prime_count and nth prime, next_prime and prev_prime, moebius and totient
-functions, integer factoring, and more.
+functions, random primes, integer factoring, and more.
 
 The default sieving and factoring are intended to be the fastest on CPAN.
 Current measurements show it is faster than:
