--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Math::Prime::Util.
 
+0.19  ?? January 2012
+
+    - Update MR bases.
+
 0.18  14 January 2012
 
     - Add random_strong_prime.
