--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Fixed some issues when using bignum and Calc BigInt backend.
 
+    - Added tests for bigint is_provable_prime.
+
 0.18  14 January 2012
 
     - Add random_strong_prime.
