--- a/Changes
+++ b/Changes
@@ -8,6 +8,8 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Added tests for bigint is_provable_prime.
 
+    - Added a few tests to give better coverage.
+
 0.18  14 January 2012
 
     - Add random_strong_prime.
