--- a/Changes
+++ b/Changes
@@ -4,7 +4,8 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Update MR bases.
 
-    - Fixed some issues when using bignum and Calc BigInt backend.
+    - Fixed some issues when using bignum and Calc BigInt backend, and bignum
+      and Perl 5.6.
 
     - Added tests for bigint is_provable_prime.
 
