--- a/Changes
+++ b/Changes
@@ -7,6 +7,8 @@ Revision history for Perl extension Math::Prime::Util.
     - Replaced fast sqrt detection in PP.pm with a slightly slower version.
       The bloom filter doesn't work right in 32-bit Perl.
 
+    - Fix is_perfect_power in XS AKS.
+
 0.19  1 February 2012
 
     - Update MR bases with newest from http://miller-rabin.appspot.com/.
