--- a/TODO
+++ b/TODO
@@ -45,4 +45,4 @@
   each), then use it to get 32-bit irands.  This would only be used if they
   didn't give us a RNG (so they don't care about strict crypto).
 
-- Add PE 35 Circular primes and PE 291 Panatoipal primes to bin/primes.pl
+- Add PE 291 Panatoipal primes to bin/primes.pl
