--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Perl extension Math::Prime::Util.
 
+0.21  ? February 2012
+
+    - primes.pl changes:
+      - add circular and Panaitopol primes
+      - big Pillai primes speedup by not using bigints if not necessary
+
 0.20  3 February 2012
 
     - Speedup for PP AKS, and turn off test on 32-bit machines.
