--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Revision history for Perl extension Math::Prime::Util.
 
     - primes.pl: Add circular and Panaitopol primes, speedup Pillai primes.
 
+    - Spelling fixes in documentation.
+
 0.20  3 February 2012
 
     - Speedup for PP AKS, and turn off test on 32-bit machines.
