Add Euler totient range, speedup divisor_sum

--- a/Changes
+++ b/Changes
@@ -6,6 +6,10 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Spelling fixes in documentation.
 
+    - Fast return of Euler's totient over a range.
+
+    - Speedup of divisor sum.  Also default to sigma if no sub given.
+
 0.20  3 February 2012
 
     - Speedup for PP AKS, and turn off test on 32-bit machines.
