--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Math::Prime::Util.
 
-0.22 xx February 2012
+0.22 26 February 2012
 
     - Move main factor loop out of xs and into factor.c.
 
