--- a/TODO
+++ b/TODO
@@ -37,9 +37,13 @@
 
 - More efficient Mertens.  The current version has poor growth.
 
-- Add first and second Chebyshev functions.  See Planat and Solé (2011).
-  MPU::GMP has primorial and consecutive_integer_lcm which are what we need.
-
 - Keep speeding up factoring for very large values.
 
 - More efficient totient segment.  Do we really need primes to n/2?
+
+- Add a more complex system for allowing something like:
+      FOREACH_PRIME(low, high) {
+        ....
+      } END_FOREACH_PRIME
+  that (1) handles any low / high, and (2) segments.  Take segment_primes
+  from XS.xs to do this.
