Minor updates for release

--- a/Changes
+++ b/Changes
@@ -2,14 +2,16 @@ Revision history for Perl extension Math::Prime::Util.
 
 0.24  5 March 2013
 
-    - euler_phi on a range wasn't working right with some ranges.
-
     - Fix compilation with old pre-C99 strict compilers (decl after statement).
+
+    - euler_phi on a range wasn't working right with some ranges.
 
     - More XS prime count improvements to speed and space.
 
     - PP prime count for 10^9 and larger is ~2x faster and uses much less
       memory.  Similar impact for nth_prime 10^8 or larger.
+
+    - Let factor.pl accept expressions just like primes.pl.
 
 0.23  5 March 2013
 
