--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Math::Prime::Util.
 
+0.25 xx March 2013
+
+    - Speed up p-1 stage 2 factoring.  This makes factor() about 20% faster
+      for 19 digit semiprimes.
+
 0.24 10 March 2013
 
     - Fix compilation with old pre-C99 strict compilers (decl after statement).
