Tweak factoring and factor tests based on coverage analysis

--- a/Changes
+++ b/Changes
@@ -2,8 +2,8 @@ Revision history for Perl extension Math::Prime::Util.
 
 0.25 xx March 2013
 
-    - Speed up p-1 stage 2 factoring.  This makes factor() about 20% faster
-      for 19 digit semiprimes.
+    - Speed up p-1 stage 2 factoring.  Combined with some minor changes to the
+      general factoring combination, ~20% faster for 19 digit semiprimes.
 
     - New internal macro to loop over primary sieve starting at 2.  Simplifies
       code in quite a few places.
