Update primearray and add a simple iterator

--- a/TODO
+++ b/TODO
@@ -45,6 +45,11 @@
   - Tests
   - Examples
 
+- prime_iterator
+  - Documentation
+  - Tests
+  - Examples
+
 - Make forprimes use a segment sieve
 
 - Figure out a way to make the internal FOR_EACH_PRIME macros use a segmented
