Document the prime iterator

--- a/TODO
+++ b/TODO
@@ -54,3 +54,5 @@
 
 - Figure out a way to make the internal FOR_EACH_PRIME macros use a segmented
   sieve.
+
+- prime_count_approx on a 100-digit bigint is really slow without MPFR.
