--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Math::Prime::Util.
 
+0.29 xx May 2013
+
+    - Fix a signed vs. unsigned char issue in ranged moebius.
+
 0.28 23 May 2013
 
     - An optimization to nth_prime caused occasional threaded Win32 faults.
