Code comments about primality testing and the non-exported F-U test

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ Math::Prime::Util version 0.29
 A set of utilities related to prime numbers.  These include multiple sieving
 methods, is_prime, prime_count, nth_prime, approximations and bounds for
 the prime_count and nth prime, next_prime and prev_prime, moebius and totient
-functions, random primes, integer factoring, and more.
+functions, random primes, integer factoring, primality proofs, and more.
 
 The default sieving and factoring are intended to be the fastest on CPAN.
 Current measurements show it is faster than:
