--- a/TODO
+++ b/TODO
@@ -46,4 +46,4 @@
 
 - prime_count_approx on a 100-digit bigint is really slow without MPFR.
 
-- re-verify with Feitsma database using extra strong test
+- Refactor where functions exist in .c.  Lots of primality tests in factor.c.
