--- a/TODO
+++ b/TODO
@@ -48,3 +48,5 @@
 
 - Write a standalone function that demonstrates the memory leak with MULTICALL,
   so we can use MULTICALL.
+
+- Tests, documentation, optimizations, and comparisons for p+1 factoring
