--- a/Changes
+++ b/Changes
@@ -11,6 +11,7 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Added:
         is_frobenius_underwood_pseudoprime
+        is_almost_extra_strong_lucas_pseudoprime
         lucas_sequence
         pplus1_factor
 
