--- a/Changes
+++ b/Changes
@@ -7,7 +7,8 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Fixed a rare refcount / bignum / callback issue.
 
-    - Small mulmod speedup for non-gcc/x86_64 platforms.
+    - Small mulmod speedup for non-gcc/x86_64 platforms, and for any platform
+      with gcc 4.4 or newer.
 
     - Add more conditions to ECPP block verification.
 
